# hypercut

./: .gitignore  CMakeLists.txt  imgui.ini  readme.md
docker/: cmd.ps
main/: CMakeLists.txt  main.cpp
script/: jpg2mp4.py  mill.py  millscreenshot.py
src/bsp/: bsp.cpp  bsp.h  bsp_util.cpp  bsp_util.h  bvh.cpp  bvh.h  mesh.cpp  mesh.h  oracle.cpp  plywriter.h  tribox3.cpp  util.cpp  util.h
src/bsp/pmp/: surface_mesh.cpp  surface_mesh.h
